--- a/README
+++ b/README
@@ -1,13 +1,10 @@
 A Simple implementation of OAuth-2.0 client protocol in Racket.
 
-This does not fully implement the actual protocol.
-
-Status : This is early stage of project.
+Status : 
          Partially tested with google oauth flow.
 	 Partially tested with facebook oauth flow.
 
 
-See How-to-use-OAuth.txt
 See Example dir for different types of flow and use.
 Also see  http://code.google.com/apis/accounts/docs/OAuth2.html
 
